--- a/Index.html
+++ b/Index.html
@@ -88,8 +88,26 @@
 
         <span> <a target="_blank" href="index2.html">Версія англійською</a>
         </span>
-        <div></div>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <nav>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Resume_english_ver.github.io/">
+                    </a>Resume_english_ver
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Less2_Task1_menu_list.github.io/">Адреса
+                        Интернета</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Less2_Task1_article.github.io/">Article
+                        Адреса Интернета</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/To_buy_list/ ">To buy list</a>
+                </li>
+
+            </ul>
+        </nav>
 
 
     </div>
