--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--header starts here-->
 
         <header>
-            <img src="https://github.com/LemmDEV/Resume-Repository.github.io/Photo1.jpg" alt="My photo" title="me smiling :)" style="width: 330px;height: 400px; ">
+            <img src="Resume-Repository.github.io/Photo1.jpg" alt="My photo" title="me smiling :)" style="width: 330px;height: 400px; ">
 
             <h4 style="color: grey;">Майбутній <span style="color: lawngreen;">Front-End</span> розробник</h4>
 
