--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             <footer style="margin-top: 15px;">
                 <span style="font-size: 14px; color: grey;"> Жовтень, 2020
                     <span style="color: blanchedalmond;">|</span>
-                    email: ch_dev@ukr.net <span style="color: blanchedalmond;">|</span> <br>
+                    <a href=mailto:blablabla@gmail.com> email: blablabla@gmail.com </a>
+                    <span style="color: blanchedalmond;">|</span> <br>
                     tel: +3 80 99 999 99 99
                 </span>
                 <hr style="border: solid rgb(255, 208, 0) 1px;">
