--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <span style="color: blanchedalmond;">|</span>
                     <a href=mailto:blablabla@gmail.com> email: blablabla@gmail.com </a>
                     <span style="color: blanchedalmond;">|</span> <br>
-                    tel: +3 80 99 999 99 99
+                     <a href=tel:+380999999999> tel: +3 80 99 999 99 99 </a>
+                    
                 </span>
                 <hr style="border: solid rgb(255, 208, 0) 1px;">
             </footer>
