--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <!--Link to eng vers of doc-->
 
-        <span> <a target="_blank" href="index2.html">Версія англійською</a>
+        <span> <a target="_blank" href="https://lemmdev.github.io/Resume_english_ver.github.io/">Версія англійською</a>
         </span>
         <div></div>
         <p>Lorem ipsum dolor sit amet.</p>
