--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--header starts here-->
 
         <header>
-            <img src="Photo1.JPG" alt="My photo" title="me smiling :)" style="width: 330px;height: 400px; ">
+            <img src="./images/Photo1.jpg" alt="My photo" title="me smiling :)" style="width: 330px;height: 400px; ">
 
             <h4 style="color: grey;">Майбутній <span style="color: lawngreen;">Front-End</span> розробник</h4>
 
@@ -77,17 +77,18 @@
             <footer style="margin-top: 15px;">
                 <span style="font-size: 14px; color: grey;"> Жовтень, 2020
                     <span style="color: blanchedalmond;">|</span>
-                    email: ch_dev@ukr.net <span style="color: blanchedalmond;">|</span> <br>
-                    tel: +3 80 99 999 99 99
+                    <a href=mailto:blablabla@gmail.com> email: blablabla@gmail.com </a>
+                    <span style="color: blanchedalmond;">|</span> <br>
+                     <a href=tel:+380999999999> tel: +3 80 99 999 99 99 </a>
+                    
                 </span>
                 <hr style="border: solid rgb(255, 208, 0) 1px;">
             </footer>
         </div>
 
-        <!--Link to eng vers of doc-->
+        <!--Links -->
 
-        <span> <a target="_blank" href="index2.html">Версія англійською</a>
-        </span>
+      
         <nav>
             <ul>
                 <li>
