--- a/index.html
+++ b/index.html
@@ -86,13 +86,28 @@
             </footer>
         </div>
 
-        <!--Link to eng vers of doc-->
+        <!--Links-->
+         <nav>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Resume_english_ver.github.io/">
+                    </a>Resume_english_ver
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Less2_Task1_menu_list.github.io/">Адреса
+                        Интернета</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/Less2_Task1_article.github.io/">Article
+                        Адреса Интернета</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://lemmdev.github.io/To_buy_list/ ">To buy list</a>
+                </li>
 
-        <span> <a target="_blank" href="https://lemmdev.github.io/Resume_english_ver.github.io/">Версія англійською</a>
-        </span>
-        <div></div>
-        <p>Lorem ipsum dolor sit amet.</p>
-
+            </ul>
+        </nav>
+       
 
     </div>
 </body>
