--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <ul>
                 <li>
                     <a target="_blank" href="https://lemmdev.github.io/Resume_english_ver.github.io/">
-                    </a>Resume_english_ver
+                    Resume_english_ver</a>
                 </li>
                 <li>
                     <a target="_blank" href="https://lemmdev.github.io/Less2_Task1_menu_list.github.io/">Адреса
